--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "conventionalCommits.scopes": ["LostPet", "AnimalTypes"]
+  "conventionalCommits.scopes": ["LostPet", "AnimalTypes", "Gender"]
 }
