feat(Jwt): :sparkles: Added Jwt feature
Added configs, dto and implementation of Jwt creation

--- a/perdidog/appsettings.json
+++ b/perdidog/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "AuthenticationConnection": ""
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
+  }
 }
