--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "conventionalCommits.scopes": ["LostPet", "AnimalTypes", "Gender"]
+  "conventionalCommits.scopes": [
+    "LostPet",
+    "AnimalTypes",
+    "Gender",
+    "Swagger"
+  ]
 }
